2002-11-07    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/auth/__init__.py (CookieAuthBase.logout): fix
	to prevent two cookies from being created with the same name and
	different paths.

	* docs/tutoria/src/htdocs/: (various files) more files added.

2002-11-05  Jacob Smullyan  <smulloni@smullbola.smullyan.org>

	* docs/tutorial/src/htdocs/: (various files) user registration for
	hoptime now works.

2002-11-05  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/vfs/ftpfs.py (FtpFS.walk): Added a separate walk
	implementation, as the standard one made a multiple ftp requests for 
	every file, which wasn't a good thing.

2002-11-01    <smulloni@smullbola.smullyan.org>

	* docs/tutorial/src/: (various files) some progress on 'hoptime'
	demo application.
	* SkunkWeb/Services/auth/__init__.py (CookieAuthBase.login): login
	now returns what validate returns to it if the value is true.
	This is useful when validate returns a User object of some kind.

2002-10-31  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/ftpfs.py (FTPFile.robuster): now catch more errors.

2002-10-25  Jacob Smullyan  <jsmullyan@wnyc.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:url:>}}): Added
	documentation about the abs argument to <:url:>.

	* SkunkWeb/Services/templating/UrlBuilder.py (_genUrl): fixed url
	generation so it handles "need_full" argument correctly; now
	handles https and relies less on the presence of the Host request
	header. 

	* SkunkWeb/Services/templating/HTMLTags.py (UrlTag.genCode): added
	new argument, "abs", which generates an absolute url when true.

2002-10-24  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/static.py: made to work with Python 2.2.2.

2002-10-22  Jacob Smullyan  <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/ftpfs.py: fixes to metaclass.  Doesn't work well
	anyway, on my installation; for me, ftplib segfaults, which is
	quite nasty.

2002-10-21  Jacob Smullyan  <smulloni@smullyan.org>
